views/client.css
/* * { margin: 0; padding: 0; box-sizing: border-box; }
body { font: 13px Helvetica, Arial; }
form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
form input { border: 0; padding: 10px; width: 90%; margin-right: 0.5%; }
form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
#messages { list-style-type: none; margin: 0; padding: 0; }
#messages li { padding: 5px 10px; }
#messages li:nth-child(odd) { background: #eee; } */

html{
    display: flex;
    position: fixed;
    background-image: url('./images/Group\ 2.svg');
    background-position: center center;
    background-repeat: no-repeat;
    background-size:cover;
    height: 100vh;
    width:100%;
   
}
header{
    display:block;
    position: fixed;
    width: 100%;
    height: 3rem;
    color: white;
    background-color:orange;
    left:0rem;
    top:0;
    font-size: 30px;
    font-family: Arial, Helvetica, sans-serif;
    padding-top:2rem;
    padding-left: 1rem;
    z-index: 1;

}
body{
    display: flex;
    position: relative;
    width: 100%;
}
::-webkit-scrollbar{
    display: none;
}
footer{
    display: block;
    position: fixed;
    height: 3rem;
    width:100%;
    bottom: 0rem;
    left:0;
    background-color: orange;
    
}

#m{
    display: block;
    position: absolute;
    height:3rem;
    width:70%;
    left:4%;
    border:none;
    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.199);
    top:-1.5rem;
    border-radius: 50px;
    outline-style: none;
    padding-left: 1.5rem;
    font-size: 15px;
    font-family: Arial, Helvetica, sans-serif;
    color: rgb(91, 89, 95);
    

}
#m:focus{
 
  box-shadow: 0px 0px 10px 1px orange;
}
#snd{
    display: flex;
    position: absolute;
    height:3rem;
    width:3rem;
    left:79%;
    top:-1.5rem;
    padding-left:.5rem;
    border-radius: 100%;
    border:none;
    background-color:rgb(255, 123, 0);
    color: white;
    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.199);
  outline-style: none;
    cursor: pointer;
    margin-left: 1rem;
  
    margin-right: 1rem;
    
    
 

}
#snd img{
    display: block;
    position: absolute;
    height: 2rem;
    width: 2rem;
    top:.5rem;
    left:.7rem;
   
  
}

main{
    display: flex;
    position: relative;
    flex-direction: column;
   
    height: 70%;
  
    overflow-x: hidden;
    overflow-y: scroll;
     font-size: 30px;
    margin-top: 3rem;
    padding-bottom:5rem;
    padding-top: 2rem;
  
    
}
.receiver{
    display: flex;
    position: relative;
     height: fit-content;
     width: fit-content;
     margin:1rem;
     margin-left: .5rem;
     padding: 1rem;
    font-size: 16px;
    background-color: rgb(255, 255, 255);
    box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.137);
      
   
    border-radius: 0px 50px 50px 50px;
    color: rgb(68, 67, 71);
    font-family: Arial, Helvetica, sans-serif;
}

.sender{
    display: flex;
    position: relative;
   
     height: fit-content;
     width: fit-content;
     margin-left: .5rem;
     padding: 1rem;
    font-size: 16px;
    background-color:rgb(255, 255, 255);
    box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.137);
  
   padding-left: 1.5rem;
    border-radius: 50px 0px 50px 50px;
    color:   rgb(68, 67, 71);
    font-family: Arial, Helvetica, sans-serif;
    
}

